<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/title"
                    layout="@layout/app_title" />


                <!-- 手机注册-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="10dip"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dip"
                        android:gravity="left|center"
                        android:text="@string/zcsjh"
                        android:textColor="#90000000" />

                    <EditText
                        android:id="@+id/shoujihao"
                        android:layout_width="0dip"
                        android:layout_height="30dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dip"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:gravity="left|center"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="@color/txt_black" />

                    <TextView
                        android:id="@+id/send_code"
                        android:layout_width="60dip"
                        android:layout_height="37dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="9dip"
                        android:layout_marginRight="9dip"
                        android:background="@drawable/bg_bule_fillet"
                        android:gravity="center"
                        android:text="@string/fasong"
                        android:textColor="@color/white"
                        android:textColorHint="@color/txt_black" />

                    <TextView
                        android:id="@+id/timeCheckPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="9dip"
                        android:layout_marginRight="9dip"
                        android:gravity="right|center"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:visibility="gone" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="10dip"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dip"
                        android:gravity="left|center"
                        android:text="@string/sryzm"
                        android:textColor="#90000000" />

                    <EditText
                        android:id="@+id/yanzhengma"
                        android:layout_width="0dip"
                        android:layout_height="30dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dip"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:gravity="left|center"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="@color/txt_black" />

                </LinearLayout>

                <!-- 登录密码 -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="10dip"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dip"
                        android:gravity="left|center"
                        android:text="@string/srxmm"
                        android:textColor="#90000000" />

                    <EditText
                        android:id="@+id/mima"
                        android:layout_width="0dip"
                        android:layout_height="30dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dip"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:gravity="left|center"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textColorHint="@color/txt_black" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="10dip"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dip"
                        android:gravity="left|center"
                        android:text="@string/qrxmm"
                        android:textColor="#90000000" />

                    <EditText
                        android:id="@+id/querenmima"
                        android:layout_width="0dip"
                        android:layout_height="30dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dip"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:gravity="left|center"
                        android:inputType="textPassword"
                        android:textColor="#000000" />
                </LinearLayout>

                <Button
                    android:id="@+id/ok"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_marginBottom="8dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/button_style01"
                    android:text="@string/queren"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>