<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/beijing"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
                    tools:layout_editor_absoluteX="0dp" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/gerenzhongxin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/activity_top_text_size"
                    app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
                    app:layout_constraintRight_toRightOf="@+id/constraintLayout2"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

                <com.sevensevenlife.view.custumview.CircleImageView
                    android:id="@+id/user_head_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:minHeight="60dp"
                    android:minWidth="60dp"
                    android:src="@drawable/touxiang"
                    app:border_color="#ffffff"
                    app:border_width="2dp"
                    app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <View
                    android:id="@+id/user_info"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/bg_click_gray"
                    app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="登录/注册"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toRightOf="@+id/user_head_img"
                    app:layout_constraintTop_toTopOf="@+id/user_head_img" />


                <TextView
                    android:id="@+id/login_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawableRight="@drawable/ic_chevron_white"
                    android:textColor="#ffffff"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="@+id/user_head_img"
                    app:layout_constraintLeft_toRightOf="@+id/user_head_img"
                    app:layout_constraintRight_toRightOf="@+id/view2"
                    app:layout_constraintTop_toBottomOf="@+id/nickName" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintLeft_toLeftOf="@+id/view2"
                    app:layout_constraintRight_toRightOf="@+id/view2">


                    <ImageView
                        android:id="@+id/user_balance"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_click_gray"
                        android:onClick="weiKaiTong"
                        android:src="@drawable/yue" />

                    <ImageView
                        android:id="@+id/user_discount"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_click_gray"
                        android:src="@drawable/youhui" />

                    <ImageView
                        android:id="@+id/integral"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_click_gray"
                        android:onClick="weiKaiTong"
                        android:src="@drawable/jifen" />

                    <ImageView
                        android:id="@+id/waiter"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_click_gray"
                        android:onClick="myFuwuYuan"
                        android:src="@drawable/fuwuyuan" />

                    <ImageView
                        android:id="@+id/service"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_click_gray"
                        android:onClick="weiKaiTong"
                        android:src="@drawable/fuwushang" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/user_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:onClick="weiKaiTong"
                android:paddingLeft="15dp"
                android:text="@string/wodexiaoqu" />

            <include layout="@layout/line_w" />

            <TextView
                android:id="@+id/user_invitation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:onClick="goYouLi"
                android:paddingLeft="15dp"
                android:text="@string/youli" />

            <TextView
                android:id="@+id/user_msg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_margin="0dp"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:onClick="goInfoList"
                android:paddingLeft="15dp"
                android:text="@string/xiaoxizhongxin" />

            <include layout="@layout/line_w" />

            <TextView
                android:id="@+id/user_opinion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:paddingLeft="15dp"
                android:text="@string/yijian" />


            <TextView
                android:id="@+id/user_setup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_margin="0dp"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:onClick="sheZhi"
                android:paddingLeft="15dp"
                android:text="@string/shezhi" />

            <include layout="@layout/line_w" />

            <TextView
                android:id="@+id/user_settled"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginBottom="180dp"
                android:background="@color/white"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center|left"
                android:onClick="ruZhu"
                android:paddingLeft="15dp"
                android:text="@string/ruzhu" />

        </LinearLayout>

    </ScrollView>
</layout>