<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#F89A58"
        android:focusable="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/title"
                layout="@layout/app_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_80"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:scrollbars="none">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:textColorHint="@color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="11">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/shoujihao"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:background="@drawable/bg_red_register_edittext"
                        android:drawableLeft="@drawable/ic_phone"
                        android:gravity="center_vertical"
                        android:hint="请输入手机号"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_16"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/send_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@drawable/bg_bule_fillet"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/fasong"
                    android:textColor="@color/white" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColorHint="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_red_register_edittext"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/dp_4"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:gravity="center_vertical"
                    android:hint="请输验证码"
                    android:inputType="text"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mima"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_red_register_edittext"
                    android:drawableLeft="@drawable/ic_pass_word"
                    android:drawablePadding="@dimen/dp_4"
                    android:drawableStart="@drawable/ic_pass_word"
                    android:gravity="center_vertical"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:background="@drawable/bg_red_login_fillet"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_translate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:background="@drawable/bg_bule_fillet"
                android:gravity="center"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:foreground="@drawable/bg_click_gray"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/wjmm"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>
</layout>
